--- a/src/pages/UserProfile/styles.css
+++ b/src/pages/UserProfile/styles.css
@@ -1,5 +1,9 @@
 .UserPage {
+  display: flex;
   width: 100vw;
+  min-height: 100vh;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .ListTitle {
